2002-01-29  Kenneth Kocienda  <kocienda@apple.com>

        Changed over to the new cache loader in WebFoundation
        
	* src/kwq/KWQKHTMLPart.h:
	* src/kwq/KWQKHTMLPart.mm: (-[KHTMLPartLoadClient init]), (-[KHTMLPartLoadClient
	WCURLHandleResourceDidBeginLoading:userData:]), (-[KHTMLPartLoadClient
	WCURLHandleResourceDidCancelLoading:userData:]), (-[KHTMLPartLoadClient
	WCURLHandleResourceDidFinishLoading:userData:]), (-[KHTMLPartLoadClient
	WCURLHandle:resourceDataDidBecomeAvailable:offset:length:userData:]),
	(-[KHTMLPartLoadClient WCURLHandle:resourceDidFailLoadingWithResult:userData:]),
	(-[KHTMLPartLoadClient dealloc]), (KHTMLPart::slotData), (KHTMLPart::openURL):
	* src/kwq/KWQKjobclasses.mm:
	* src/kwq/KWQKloader.mm: (-[URLLoadClient initWithLoader:]), (-[URLLoadClient
	WCURLHandleResourceDidBeginLoading:userData:]), (-[URLLoadClient
	WCURLHandleResourceDidCancelLoading:userData:]), (-[URLLoadClient
	WCURLHandleResourceDidFinishLoading:userData:]), (-[URLLoadClient
	WCURLHandle:resourceDataDidBecomeAvailable:offset:length:userData:]),
	(-[URLLoadClient WCURLHandle:resourceDidFailLoadingWithResult:userData:]),
	(-[URLLoadClient dealloc]):
	* src/kwq/kio/jobclasses.h:

2002-01-29  Maciej Stachowiak  <mjs@apple.com>

	Reimplement QDict, QMap, QPtrDict and QSortedList.

	Reimplement QDict in terms of CFDictionary:
	
	* src/kwq/qt/qdict.h:
	* src/kwq/KWQDictImpl.h:
	* src/kwq/KWQDictImpl.mm: (KWQDictImpl::KWQDictImpl), (KWQDictImpl::insert),
	(KWQDictImpl::remove), (KWQDictImpl::find),
	(KWQDictIteratorImpl::KWQDictIteratorImpl),
	(KWQDictIteratorImpl::currentStringKey):

	Reimplement QMap as a right-threaded red-black tree, splitting
	the work between template classes that manipulate keys and values
	and non-template base classes that handle all the pointer
	manipulation:
	
	* src/kwq/qt/qmap.h:
	* src/kwq/KWQMapImpl.h:
	* src/kwq/KWQMapImpl.mm: (KWQMapNodeImpl::KWQMapNodeImpl),